# auth-mini-gateway

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
.legion/tasks/auth-mini-gateway-poc/: log.md  plan.md  tasks.md
.legion/tasks/auth-mini-gateway-poc/docs/: pr-body.md  report-walkthrough.md  review-change.md  rfc-review.md  rfc.md  test-report.md
.legion/tasks/authenticated-reverse-proxy/: log.md  plan.md  tasks.md
.legion/tasks/authenticated-reverse-proxy/docs/: pr-body.md  report-walkthrough.md  research.md  review-change.md  review-rfc.md  rfc.md  test-report.md
.legion/tasks/enable-http2-proxy/: log.md  plan.md  tasks.md
.legion/tasks/enable-http2-proxy/docs/: pr-body.md  report-walkthrough.md  research.md  review-change.md  review-rfc.md  rfc.md  test-report.md
.legion/tasks/harden-mobile-session-lifecycle/: log.md  plan.md  tasks.md
.legion/tasks/harden-mobile-session-lifecycle/docs/: rfc.md  (+8 more)
.legion/tasks/harden-proxy-production-boundaries/: log.md  plan.md  tasks.md
.legion/tasks/production-deployment-docs/: log.md  plan.md  tasks.md
.legion/tasks/production-rust-sqlite-gateway/: log.md  plan.md  tasks.md
.legion/tasks/prove-http2-performance-regression/: log.md  plan.md  tasks.md
.legion/tasks/remove-auth-method-policy/: log.md  plan.md  tasks.md
.legion/wiki/: decisions.md  index.md  log.md  maintenance.md  patterns.md
.legion/wiki/tasks/: auth-mini-gateway-poc.md  authenticated-reverse-proxy.md  enable-http2-proxy.md  harden-mobile-session-lifecycle.md  harden-proxy-production-boundaries.md  production-deployment-docs.md  production-rust-sqlite-gateway.md  prove-http2-performance-regression.md  remove-auth-method-policy.md
benchmarks/http2-regression/: Cargo.toml  build.rs
benchmarks/http2-regression/src/: archive.rs  build.rs  bundle.rs  calibration.rs  calibration_coordinator.rs  campaign_coordinator.rs  codec.rs  control.rs  delivery.rs  error.rs  evidence.rs  fixture.rs  harness.rs  json.rs  lib.rs  linux.rs  load.rs  main.rs  materialization.rs  orchestrator.rs  process_plan.rs  raw.rs  rng.rs  sampler.rs  schedule.rs  schema.rs  seal.rs  session.rs  statistics.rs  storage.rs  topology.rs  wire.rs
benchmarks/http2-regression/tests/: calibration_coordinator.rs  campaign_coordinator.rs  delivery.rs  foundation.rs  process_arms.rs
docs/: README.md  production-deployment.md  silent-sso-capability.md
examples/: auth-mini-gateway.service  docker-compose.yml  frpc.toml  frps.toml  mock-auth-mini.ts  nginx-proxy-rollback.conf  nginx-proxy.conf  nginx.conf  upstream.rs  upstream.ts
scripts/: e2e-mode-switch.sh  e2e-old-binary-compat.sh  e2e-proxy-mode.sh  e2e-real-auth-mini.sh  e2e-wal-backup-restore.sh  smoke-nginx.mjs
src/: app.ts  auth-mini.ts  auth_mini.rs  capacity.rs  config.rs  config.ts  cookies.rs  cookies.ts  db.rs  exit.rs  flight.rs  http.rs  jwt.rs  lib.rs  main.rs  policy.rs  policy.ts  proxy.rs  return_target.rs  returns.ts  runtime_plan.rs  server.rs  server.ts  store.ts  types.ts  util.rs
tests/: gateway.test.ts  proxy_integration.rs
(+34 files in other folders)
