[package]
name = "auth-mini-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
ed25519-dalek = "2.1.1"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
sha1 = "0.10.6"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.14.0"
