[package]
name = "auth-mini-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
bytes = "1.12.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
ed25519-dalek = "2.1.1"
hmac = "0.12.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1", "server"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "ring", "tls12"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
sha1 = "0.10.6"
tokio = { version = "1.52.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "fmt"] }
url = "2.5.4"

[dev-dependencies]
rcgen = "0.14.3"
tempfile = "3.14.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
