[package]
name = "auth-mini-http2-regression"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
base64 = "=0.22.1"
bytes = "=1.12.0"
h2 = "=0.4.14"
hmac = "=0.12.1"
http = "=1.4.0"
http-body-util = "=0.1.3"
hyper = { version = "=1.10.1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "=0.1.20", features = ["http1", "http2", "server", "tokio"] }
libc = "=0.2.186"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha1 = "=0.10.6"
sha2 = "=0.10.9"
tar = { version = "=0.4.46", default-features = false }
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
zstd-safe = { version = "=7.2.4", default-features = false, features = ["std", "zstdmt"] }

[profile.release]
codegen-units = 1
lto = "thin"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
